// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consent renders with postPromptUI 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
    type="SourcePoint"
  >
    <script
      type="application/json"
    >
      {"clientConfig":{"accountId":"test","siteName":"product","privacyManagerId":"privacy","postPromptUI":"postPrompt"}}
    </script>
    <div
      id="postPrompt"
    >
      <button
        on="tap:consent.prompt(consent=SourcePoint)"
        type="submit"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders without postPromptUI 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
    type="SourcePoint"
  >
    <script
      type="application/json"
    >
      {"clientConfig":{"accountId":"test","siteName":"product","privacyManagerId":"privacy","postPromptUI":"privacy-settings-prompt"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        on="tap:consent.prompt(consent=SourcePoint)"
        type="submit"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;
